fix mobile spacing

--- a/packages/prop-house-webapp/src/pages/Base/Base.module.css
+++ b/packages/prop-house-webapp/src/pages/Base/Base.module.css
@@ -12,3 +12,12 @@
 .loadMoreBtn {
   width: 100%;
 }
+.simpleRoundCardWrapper {
+  margin: 0;
+}
+
+@media (max-width: 767px) {
+  .simpleRoundCardWrapper {
+    margin: 0 15px;
+  }
+}
